# freecfd

./: Makefile  ProjectHome.md  inputs.in
doc/: example.in  inputfile.in
examples/15_deg_wedge/: wedge.in
examples/1Dtest/: test.in
examples/cavityTunnel/: cavityTunnel.in
examples/channel/: channel.cgns
examples/cylinder/: cylinder.in
examples/hypersonic_cylinder/: argon.mat  cylinder.cgns  cylinder.in
examples/interCube/: interCube.in
examples/largeCube/: largeCube.in
examples/partitionTest/: out1000.ref  partitionTest.in
examples/reliefTunnel/: reliefTunnel.in
examples/sq_cavity/: sq_cavity.in
examples/wedge/: wedge.in
releases/cgnslib_2.5/include/: cgnslib.h
releases/examples/cylinder/: cylinder.in
releases/src/: bc.h  grid.h  grid_create_elements.cc  initialize_linear_system.cc  inputs.cc  inputs.h  main.cc  mpi_functions.cc  mpi_functions.h  petsc_functions.cc  petsc_functions.h  vec3d.cc  vec3d.h  write_restart.cc  write_vtk.cc
releases/src/grid_read/: grid_read.cc
src/: CMakeLists.txt  Makefile  RoeFlux.cc  apply_bcs.cc  assemble_linear_system.cc  bc.h  bc_interface.cc  bc_interface_sync.cc  check_inputs.cc  commons.cc  commons.h  convective_face_flux.cc  curvilinear_grad_map.cc  diffFlux.cc  diffusive_face_flux.cc  eos.h  face_interpolation_weights.cc  flamelet.cc  flamelet.h  flamelet_table.cc  flamelet_terms.cc  fou.cc  gradient_maps.cc  grid.cc  grid.h  grid_averaging_metrics.cc  grid_create_elements.cc  grid_old.h  grid_partition.cc  grid_readers.cc  hancock.cc  header  hexa_gradient_maps.cc  initialize.cc  initialize_linear_system.cc  inputs.cc  inputs.h  inviscid_face_flux.cc  inviscid_flux.cc  inviscid_flux_function.cc  (+40 more)
src/grid/: CMakeLists.txt  grid.cc  grid.h  grid_create_elements.cc  grid_face_averaging_metrics.cc  grid_partition.cc  grid_reader_tec.cc  grid_readers.cc  grid_transform.cc  grid_write_cas.cc
src/grid_read/: grid_read.cc
src/heat_conduction/: Makefile  hc.cc  hc.h  hc_assemble_linear_system.cc  hc_diffusive_face_flux.cc  hc_initialize_linear_system.cc  hc_mpi.cc  hc_petsc_functions.cc  hc_set_bcs.cc  hc_write_restart.cc
src/inputs/: inputs.cc
src/interpolate/: interpolate.cc  interpolate.h
src/kdtree/: CMakeLists.txt
src/material/: CMakeLists.txt  Makefile  material.cc
src/navier_stokes/: CMakeLists.txt  ns.cc  ns.h  ns_apply_bcs.cc  ns_assemble_linear_system.cc  ns_ausm_plus_up.cc  ns_convective_face_flux.cc  ns_diffusive_face_flux.cc  ns_initialize_linear_system.cc  ns_limiters.cc  ns_mpi.cc  ns_petsc_functions.cc  ns_read_restart.cc  ns_roe.cc  ns_sd_slau.cc  ns_set_bcs.cc  ns_sources.cc  ns_state_cache.h  ns_stegger_warming.cc  ns_time_terms.cc  ns_vanleer.cc  ns_write_restart.cc
src/polynomial/: Makefile  polynomial.cc  polynomial.h
src/rans/: CMakeLists.txt  rans.cc  rans.h  rans_limiters.cc  rans_mpi.cc  rans_petsc_functions.cc  rans_read_restart.cc  rans_set_bcs.cc  rans_terms.cc  rans_time_terms.cc  rans_update_eddy_viscosity.cc
src/utilities/: CMakeLists.txt  utilities.cc  utilities.h
src/variable/: variable.cc  variable.h
src/vec3d/: vec3d.cc
tags/release-0.0.1/src/: commons.h  convective_face_flux.cc  grid.h  grid_averaging_metrics.cc  grid_partition.cc  initialize_linear_system.cc  inputs.cc  inputs.h  main.cc  mpi_functions.cc  petsc_functions.cc  probe.h  probes.cc  read_inputs.cc  state_cache.h  vec3d.cc  vec3d.h  write_restart.cc
tags/release-0.1.0/src/: Makefile  bc.h  check_inputs.cc  eos.cc  flamelet.h  grid_averaging_metrics.cc  grid_readers.cc  initialize.cc  initialize_linear_system.cc  mpi_functions.cc  mpi_functions.h  rans.cc  rans.h  rans_terms.cc  read_inputs.cc  state_cache.h  write_restart.cc
tags/release-0.1.1/src/: check_inputs.cc  flamelet.cc  flamelet.h  flamelet_terms.cc  grid.cc  grid.h  initialize.cc  initialize_linear_system.cc  mpi_functions.h  probes.cc  rans.cc  rans.h  rans_terms.cc
tags/release-0.1.2/src/: apply_bcs.cc  assemble_linear_system.cc  check_inputs.cc  diffusive_face_flux.cc  eos.cc  flamelet.cc  flamelet.h  flamelet_terms.cc  grid.cc  grid.h  grid_averaging_metrics.cc  grid_partition.cc  inputs.h  main.cc  probe.h  probes.cc  rans.cc  rans_terms.cc  write_restart.cc
trunk/: Makefile
trunk/doc/: example.in  inputfile.in
trunk/examples/1Dtest/: test.cgns  test.in
trunk/examples/cavityTunnel/: cavityTunnel.cgns  cavityTunnel.in
trunk/examples/channel/: channel.in
trunk/examples/cylinder/: air.mat  cylinder.cgns  cylinder.in
trunk/examples/hypersonic_cylinder/: cfl.sch
trunk/examples/interCube/: interCube.in
trunk/examples/largeCube/: largeCube.in
trunk/examples/partitionTest/: partitionTest.cgns  partitionTest.in
trunk/examples/reliefTunnel/: reliefTunnel.cgns  reliefTunnel.in
trunk/examples/sqCavity/: cavity.cgns  cavity.in
trunk/examples/sq_cavity/: sq_cavity.in
trunk/examples/wedge/: wedge.cgns  wedge.in
trunk/src/: CMakeLists.txt  Makefile  RoeFlux.cc  apply_bcs.cc  assemble_linear_system.cc  bc.h  bc_interface.h  check_inputs.cc  cmake_vars.h.in  commons.cc  commons.h  convective_face_flux.cc  curvilinear_grad_map.cc  diffFlux.cc  diffusive_face_flux.cc  eos.cc  eos.h  face_interpolation_weights.cc  flamelet.cc  flamelet.h  flamelet_table.cc  flamelet_terms.cc  fou.cc  gradient_maps.cc  grid.cc  grid.h  grid_averaging_metrics.cc  grid_create_elements.cc  grid_old.cc  grid_old.h  grid_partition.cc  grid_readers.cc  hancock.cc  initialize.cc  initialize_linear_system.cc  inputs.cc  inputs.h  inviscid_face_flux.cc  inviscid_flux.cc  inviscid_jac.cc  (+42 more)
trunk/src/grid/: CMakeLists.txt  Makefile  grid.cc  grid.h  grid_averaging_metrics.cc  grid_create_elements.cc  grid_face_averaging_metrics.cc  (+5 more)
trunk/src/heat_conduction/: CMakeLists.txt  hc.cc  hc.h  hc_assemble_linear_system.cc  hc_diffusive_face_flux.cc  hc_initialize_linear_system.cc  hc_mpi.cc  hc_petsc_functions.cc  hc_read_restart.cc  hc_sources.cc  hc_state_cache.h
trunk/src/rans/: CMakeLists.txt  rans.cc  rans.h  rans_limiters.cc  rans_mpi.cc  rans_petsc_functions.cc  rans_read_restart.cc  rans_set_bcs.cc  rans_terms.cc  rans_write_restart.cc
(+50 files in other folders)
